--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
 @article{wei2025DreamRelation,
   title={DreamRelation: Relation-Centric Video Customization},
   author={Wei, Yujie and Zhang, Shiwei and Yuan, Hangjie and Gong, Biao and Tang, Longxiang and Wang, Xiang and Qiu, Haonan and Li, Hengjia and Tan, Shuai and Zhang, Yingya and Shan, Hongming},
-  journal={arXiv preprint arXiv:},
+  journal={arXiv preprint arXiv:2503.07602},
   year={2025}
 }
 </code>
