--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
   <title>DreamRelation</title>
-  <link rel="icon" href="static/images/dreamvideo2-logo.png">
+  <link rel="icon" href="static/images/dreamRelation-logo.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -53,7 +53,7 @@
         <div class="container is-max-desktop">
             <div class="columns is-centered">
                 <div class="column has-text-centered">
-                    <!-- <i class="pixart-alpha-icon"></i> -->
+                    <i class="pixart-alpha-icon"></i>
                     <h1 class="title is-1 publication-title" style="display: flex; align-items: center; justify-content: center; text-align: center;">
                         <span>
                             <span style="color: #B771E5; font-weight: bold; font-size: 52px;">DreamRelation:</span>
@@ -110,7 +110,7 @@
                     <div class="column has-text-centered">
                         <div class="publication-links">
                             <span class="link-block">
-                                <a href="#" target="_blank" class="external-link button is-normal is-rounded is-white">
+                                <a href="https://arxiv.org/abs/2503.07602" target="_blank" class="external-link button is-normal is-rounded is-white">
                                     <span class="icon">
                                         <i class="fas fa-file-pdf"></i>
                                     </span>
